--- a/src/app/cliente/detail-cliente/detail-cliente.component.scss
+++ b/src/app/cliente/detail-cliente/detail-cliente.component.scss
@@ -6,3 +6,17 @@
 .cliente {
   margin-top: 1rem;
 }
+
+.title {
+  font-size: 0.8rem;
+}
+
+.item{
+  font-size: 1rem;
+  font-weight: bold;
+  color: #000;
+}
+
+.botao{
+  margin-left: 10px;
+}
