--- a/src/app/cliente/add-cliente/add-cliente.component.html
+++ b/src/app/cliente/add-cliente/add-cliente.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="formulario">
-  <form [formGroup]="formClient">
+  <form [formGroup]="formClient" (ngSubmit)="editMode ? updateClient() : createClient()">
       <mat-form-field >
         <mat-label>Nome</mat-label>
         <input matInput formControlName="nome">
