--- a/src/app/cliente/add-cliente/add-cliente.component.html
+++ b/src/app/cliente/add-cliente/add-cliente.component.html
@@ -50,7 +50,7 @@
           <input matInput formControlName="cep" id="cep">
           <mat-error>Campo Obrigátorio</mat-error>
         </mat-form-field>
-        <button mat-stroked-button color="primary" (click)="buscarCep()">Buscar</button>
+        <button type="button" mat-stroked-button color="primary" (click)="buscarCep()">Buscar</button>
       </p>
       <p>
         <mat-form-field>
