--- a/src/app/cliente/detail-cliente/detail-cliente.component.html
+++ b/src/app/cliente/detail-cliente/detail-cliente.component.html
@@ -4,10 +4,14 @@
 
 <div class="cartao">
   <mat-card class="cliente">
+    <button class="botao" mat-icon-button routerLink="/client/list">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <p>
     <mat-card-header>
       <mat-card-title>{{nome}} {{sobrenome}} </mat-card-title>
     </mat-card-header>
-
+  </p>
     <mat-card-content>
       <mat-list>
         <mat-list-item>
